--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Listagem</title>
-</head>
-<body>
-    <div class="container">
-        <h1>Listagem de Categorias</h1>
-        <table class="table table-striped">
-            <tr>
-                <th>Categoria</th>
-                <th>Ações</th>
-            </tr>
-            <tr>
-                <td><%=data.categoria%></td>
-                <td></td>
-            </tr>
-        </table>
-    </div>
-</body>
-</html>
+<%-include('header')%>
+    content
+<%- include('footer')%>
