--- a/views/publicacoes/editar.ejs
+++ b/views/publicacoes/editar.ejs
@@ -1,9 +1,9 @@
 <%-include('../header')%>
         <h1>Nova categoria</h1>
-        <form action="/categorias/nova" method="post">
+        <form action="/publicacoes/editar/<%=publicacao.id%>" method="post">
             <div class="form-group">
-                <label for="categoria">Nova Categoria</label>
-                <input type="text" name="categoria" id="categoria" class="form-control" placeholder="Digite a Categoria...">
+                <label for="publicacao">Editar publicação</label>
+                <input type="text" name="publicacao" id="publicacao" class="form-control" value="<%=publicacao.publicacao%>">
             </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-outline">
