--- a/views/publicacoes/index.ejs
+++ b/views/publicacoes/index.ejs
@@ -9,8 +9,8 @@
             <%publicacoes.forEach(publicacao => {%>
             <tr>
                 <td><%=publicacao.titulo%></td>
-                <td><a href="/publicacoes/excluir/<%=publicacao.id%>">Deletar</a> 
-                    | <a href="/publicacoes/editar/<%=publicacao.id%>">Editar</a></td>
+                <td><a href="/publicacoes/excluir/<%=categoria%>/<%=publicacao.id%>">Deletar</a> 
+                    | <a href="/publicacoes/editar/<%=categoria%>/<%=publicacao.id%>">Editar</a></td>
             </tr>
             <%})%>
         </table>
