--- a/views/publicacoes/editar.ejs
+++ b/views/publicacoes/editar.ejs
@@ -1,9 +1,14 @@
 <%-include('../header')%>
-        <h1>Nova categoria</h1>
-        <form action="/publicacoes/editar/<%=publicacao.id%>" method="post">
+        <h1>Editar Publicação</h1>
+        <form action="/publicacoes/editar/<%=publicacoes.id%>/<%=categoria%>" method="post">
             <div class="form-group">
-                <label for="publicacao">Editar publicação</label>
-                <input type="text" name="publicacao" id="publicacao" class="form-control" value="<%=publicacao.publicacao%>">
+                <label for="titulo">Titulo</label>'
+                <input type="text" required name="titulo" value="<%=publicacoes.titulo%>" id="titulo" class="form-control" placeholder="Digite o titulo...">
+            </div>
+           
+            <div class="form-group">
+                    <label for="publicacao">Nova Publicação</label>
+                    <textarea class="form-control" name="conteudo" required id="" cols="30" rows="10" placeholder="Digite o conteudo"><%=publicacoes.conteudo%></textarea>
             </div>
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-outline">
