--- a/views/categorias/editar.ejs
+++ b/views/categorias/editar.ejs
@@ -6,7 +6,7 @@
                 <input type="text" name="categoria" id="categoria" class="form-control" value="<%=categoria.categoria%>">
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-outline">
+                <input type="submit" value="Salvar" class="btn btn-success">
             </div>
         </form>
  <%-include('../footer')%>
