--- a/views/publicacoes/editar.ejs
+++ b/views/publicacoes/editar.ejs
@@ -11,7 +11,7 @@
                     <textarea class="form-control" name="conteudo" required id="" cols="30" rows="10" placeholder="Digite o conteudo"><%=publicacoes.conteudo%></textarea>
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-outline">
+                <input type="submit" value="Salvar" class="btn btn-success">
             </div>
         </form>
  <%-include('../footer')%>
